WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72892
Fix image translation calculations
https://bugs.webkit.org/show_bug.cgi?id=72892
Summary
Fix image translation calculations
Robin Dunn
Reported
2011-11-21 09:08:57 PST
Created
attachment 116100
[details]
Patch that fixes image translation calculations Patch that fixes image translation calculations
Attachments
Patch that fixes image translation calculations
(1.39 KB, patch)
2011-11-21 09:08 PST
,
Robin Dunn
kevino
: review+
kevino
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin Ollivier
Comment 1
2011-11-21 10:41:13 PST
Landed in
r100934
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug