[wx] Fix image translation calculations. https://bugs.webkit.org/show_bug.cgi?id=72892

Reviewed by Kevin Ollivier.


Canonical link: https://commits.webkit.org/89423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100934 268f45cc-cd09-0410-ab3c-d52691b4dbfc